Bug 426042 - Closing document tab with middle click no longer works
Summary: Closing document tab with middle click no longer works
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.08.0
Platform: Neon Linux
: HI normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-08-31 22:44 UTC by stevemcqueen
Modified: 2020-10-12 00:59 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-2969-0.html (1.68 KB, text/html)
2020-09-08 15:22 UTC, tcanabrava
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stevemcqueen 2020-08-31 22:44:36 UTC
SUMMARY
Kate can no longer mouse middle-click to close an open document tab. This appears to be a bug/regression of previous expected/existing behavior

STEPS TO REPRODUCE
1. Open Kate
2. Open a couple documents (ctrl+n for blank one works fine)
3. In the document tab list (untitled, untitled(2), etc..) above the main editor area, mouse middle-click a document tab

OBSERVED RESULT
The tab/document does not close. 

EXPECTED RESULT
The tab/document should be closed as if clicking the red-X close button.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon 5.19, linux 5.4.0-42-generic
KDE Plasma Version: 5.19.4
KDE Frameworks Version: 5.73.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION
Other methods of closing the document tab still work fine. e.g. red X close button, right-click -> close document, ctrl-w

As of at least the version info below, middle click to close a document tab still worked:
Kate 20.04.3
KDE Plasma 5.19.4
KDE Frameworks 5.72.0
QT 5.14.2

Also, double-middle-click appears to open a new blank document in both versions (no regression). In the old Kate (20.04.3) this requires clicking in a blank area in the tab bar as otherwise it closes a document first. In the new Kate (20.08.0) double-middle-click anywhere, including an existing tab, will open a new blank document. Not sure if that helps any.
Comment 1 Nate Graham 2020-09-08 15:19:06 UTC
Looks like a regression from porting to use the standard Qt tab bar indeed. Tomaz, can you investigate?
Comment 2 tcanabrava 2020-09-08 15:22:04 UTC
Created attachment 131490 [details]
attachment-2969-0.html

yeah, easy fix.

On Tue, Sep 8, 2020 at 4:19 PM Nate Graham <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=426042
>
> Nate Graham <nate@kde.org> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>              Status|REPORTED                    |CONFIRMED
>            Keywords|                            |regression
>                  CC|                            |nate@kde.org,
>                    |                            |tumaix@gmail.com
>            Priority|NOR                         |HI
>      Ever confirmed|0                           |1
>
> --- Comment #1 from Nate Graham <nate@kde.org> ---
> Looks like a regression from porting to use the standard Qt tab bar indeed.
> Tomaz, can you investigate?
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 3 Christoph Cullmann 2020-09-15 16:46:44 UTC
Git commit c53be219d489a4f6e18eba894ab0006414b9fab9 by Christoph Cullmann.
Committed on 15/09/2020 at 16:45.
Pushed by cullmann into branch 'master'.

close tabs again with middle mouse button click

M  +8    -0    kate/katetabbar.cpp

https://invent.kde.org/utilities/kate/commit/c53be219d489a4f6e18eba894ab0006414b9fab9
Comment 4 Christoph Cullmann 2020-09-15 16:47:20 UTC
As I just worked for other stuff on the tabbar, I thought would be ok to just fix this myself.
Comment 5 Nate Graham 2020-09-15 18:01:24 UTC
+1
Comment 6 Christoph Cullmann 2020-09-17 07:52:15 UTC
Git commit 4eaa3b75bd91febbcf9823aeeb45b91e1158f98a by Christoph Cullmann.
Committed on 17/09/2020 at 07:52.
Pushed by cullmann into branch 'release/20.08'.

close tabs again with middle mouse button click

M  +8    -0    kate/katetabbar.cpp

https://invent.kde.org/utilities/kate/commit/4eaa3b75bd91febbcf9823aeeb45b91e1158f98a
Comment 7 Justin Zobel 2020-10-12 00:59:27 UTC
Thanks team, came here to request this as a feature, didn't realise it was one until recent changes. Confirmed fixed in git master, thanks!