close tabs again with middle mouse button click

BUG: 426042